# libCEMMPC

./: README.md
cu_cem_mpc/: CMakeLists.txt
cu_cem_mpc/include/: cuda_dep.h
cu_cem_mpc/include/acrobot/: acrobot.h
cu_cem_mpc/include/cartpole/: cartpole.h  cartpole_parallel.h
cu_cem_mpc/scripts/: acrobot.py  cartpole.py  make_video.py
cu_cem_mpc/src/: main.cpp
cu_cem_mpc/src/acrobot/: acrobot.cu
cu_cem_mpc/src/cartpole/: cartpole.cu  cartpole_parallel.cu
